modified:   localization_dev.ipynb

--- a/localization_dev.ipynb
+++ b/localization_dev.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NOT COMPLETED\n",
+    "## not yet detecting outer boundary correctly\n",
+    "## neither detecting eyelid\n",
+    "\n",
     "import numpy as np\n",
     "import os\n",
     "import cv2\n",
