Complete Feature Extraction

--- a/FeatureExtraction_dev.ipynb
+++ b/FeatureExtraction_dev.ipynb
@@ -2,16 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.ndimage import convolve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'IrisFeatureExtraction' from 'c:\\\\Users\\\\Javier Jiang\\\\Desktop\\\\Courses\\\\STAT5293 Applied Machine Learning for Image Analysis\\\\Iris-Recognization-Project\\\\IrisFeatureExtraction.py'>"
+       "<module 'IrisEnhancement' from 'c:\\\\Users\\\\Javier Jiang\\\\Desktop\\\\Courses\\\\STAT5293 Applied Machine Learning for Image Analysis\\\\Iris-Recognization-Project\\\\IrisEnhancement.py'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,17 +40,75 @@
     "import IrisLocalization\n",
     "import IrisNormalization\n",
     "import IrisEnhancement\n",
-    "import IrisFeatureExtraction\n",
     "\n",
     "importlib.reload(IrisLocalization)\n",
     "importlib.reload(IrisNormalization)\n",
-    "importlib.reload(IrisEnhancement)\n",
-    "importlib.reload(IrisFeatureExtraction)"
+    "importlib.reload(IrisEnhancement)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def M1(x,y,f):\n",
+    "    return np.cos(2*np.pi*f*np.sqrt(x**2+y**2))\n",
+    "\n",
+    "def G(x,y,f,delta_x,delta_y):\n",
+    "    return (1/(2*np.pi*delta_x*delta_y)) * np.exp(-1/2*(x**2/delta_x**2 + y**2/delta_y**2)) * M1(x,y,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SpatialFilter(size,delta_x,delta_y):\n",
+    "    filter = np.zeros((size,size))\n",
+    "    f = 1/delta_y\n",
+    "    for i in range(size):\n",
+    "        for j in range(size):\n",
+    "            filter[i,j] = G(-np.fix(size/2)+i, -np.fix(size/2)+j, f, delta_x, delta_y)\n",
+    "    return filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FeatureExtraction(image):\n",
+    "    # Use 8x8 spatial filter\n",
+    "    size = 8\n",
+    "    channel1 = SpatialFilter(size,3,1.5)\n",
+    "    channel2 = SpatialFilter(size,4,1.5)\n",
+    "\n",
+    "    ROI = 48\n",
+    "    image_ROI = image[:ROI,:]\n",
+    "    image_filtered1 = convolve(image_ROI, channel1, mode=\"wrap\")\n",
+    "    image_filtered2 = convolve(image_ROI, channel2, mode=\"wrap\")\n",
+    "\n",
+    "    V = []\n",
+    "\n",
+    "    for i in range(ROI//size):\n",
+    "        for j in range(len(image[0])//size):\n",
+    "            m1 = np.mean(np.abs(image_filtered1[i*size:(i+1)*size,j*size:(j+1)*size]))\n",
+    "            sd1= np.mean(np.abs(np.abs(image_filtered1[i*size:(i+1)*size,j*size:(j+1)*size])-m1))\n",
+    "            m2 = np.mean(np.abs(image_filtered2[i*size:(i+1)*size,j*size:(j+1)*size]))\n",
+    "            sd2= np.mean(np.abs(np.abs(image_filtered2[i*size:(i+1)*size,j*size:(j+1)*size])-m2))\n",
+    "            V.append(m1)\n",
+    "            V.append(sd1)\n",
+    "            V.append(m2)\n",
+    "            V.append(sd2)\n",
+    "    return V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -58,8 +129,7 @@
     "        incir, outcir = IrisLocalization.Localization(image)\n",
     "        image_normalized = IrisNormalization.Normalization(image, incir, outcir)\n",
     "        image_enhanced = IrisEnhancement.Enhancement(image_normalized)\n",
-    "        feature_vector = IrisFeatureExtraction.FeatureExtraction(image_enhanced)\n",
-    "        print(feature_vector)"
+    "        print(len(FeatureExtraction(image_enhanced)))"
    ]
   }
  ],
